--- a/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -171,7 +171,7 @@
     <div class="md:col-6" [hidden]="!shouldCreateTimestamp()">
       <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
       <p-dropdown id="delayCode"
-                  [options]="delayCodes | async"
+                  [options]="delayCodes$ | async"
                   formControlName="delayCode"
                   [filter]="true"
                   [showClear]=true
