--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="progressing" class="dummyContent">
-  <p-progressSpinner *ngIf="progressing"></p-progressSpinner>
+  <p-progressSpinner></p-progressSpinner>
 </div>
 <p-table *ngIf="!progressing" styleClass="p-datatable-sm" [value]="transportCalls" [(selection)]="selectedtransportCall"
   selectionMode="single" dataKey="transportCallID" responsiveLayout="scroll" (onRowSelect)="selectTransportCall($event)"
