refactor port on TC creation & replay observable

--- a/src/app/view/port-of-call/port-of-call.component.html
+++ b/src/app/view/port-of-call/port-of-call.component.html
@@ -9,7 +9,7 @@
         [showClear]=true
         optionLabel="UNLocationCode"
         [options]="portOfCalls$ | async"
-        filterBy="name,UNLocationCode"
+        filterBy="UNLocationName,UNLocationCode"
         placeholder="{{ 'general.port.select' | translate }}">
         <ng-template let-port pTemplate="item">
           <div *ngIf="port">
