DDT-1242: Show full publisherRole name in publisherRole lists
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -82,8 +82,14 @@
                   styleClass="dropdown"
                   formControlName="publisherRole"
                   [options]="publisherRoles"
+                  [filter]="true"
+                  filterBy="publisherRoleName,publisherRole"
+                  optionLabel="publisherRoleName"
                   placeholder="{{ 'general.publisherRole.select' | translate }}"
                   appendTo="body">
+        <ng-template let-publisherRoleDetail pTemplate="item">
+          <div>{{publisherRoleDetail.publisherRoleName}} ({{publisherRoleDetail.publisherRole}})</div>
+        </ng-template>
       </p-dropdown>
     </div>
   </ng-container>
