--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -1,9 +1,15 @@
 <div *ngIf="progressing" class="dummyContent">
   <p-progressSpinner></p-progressSpinner>
 </div>
-<p-table *ngIf="!progressing" styleClass="p-datatable-sm" [value]="transportCalls" [(selection)]="selectedTransportCall"
-  selectionMode="single" dataKey="transportCallID" responsiveLayout="scroll" (onRowSelect)="selectTransportCall($event)"
-  (onRowUnselect)="unselectTransportCall()">
+<p-table *ngIf="!progressing"
+         styleClass="p-datatable-sm"
+         [value]="transportCalls"
+         [(selection)]="selectedTransportCall"
+         selectionMode="single"
+         dataKey="transportCallID"
+         responsiveLayout="scroll"
+         (onRowSelect)="selectTransportCall($event)"
+         (onRowUnselect)="unselectTransportCall()">
   <ng-template pTemplate="caption">
     <div class="grid">
       <div class="col">{{'general.portVisit.label' | translate}}</div>
