Rewrite transport-call-table to use observable
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="progressing" class="dummyContent">
-  <p-progressSpinner></p-progressSpinner>
-</div>
-<p-table *ngIf="!progressing"
+<ng-template #loading>
+  <div class="dummyContent">
+    <p-progressSpinner></p-progressSpinner>
+  </div>
+</ng-template>
+<p-table *ngIf="transportCalls$ | async as transportCalls else loading"
          styleClass="p-datatable-sm"
          [value]="transportCalls"
          [(selection)]="selectedTransportCall"
