Remove unused event handlers in dashboard
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -8,8 +8,7 @@
     <div class="main__cards">
       <app-port-of-call class="rightSpace fullWidthAndHeight" (portOfCallNotifier)="portOfCallChangedHandler($event)">
       </app-port-of-call>
-      <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"
-        (vesselSavedNotifier)="vesselSavedHandler($event)"></app-vessel>
+      <app-vessel class="fullWidthAndHeight"></app-vessel>
 
     </div>
     <div class="main__content">
