Remove unused outputs in timestamp table
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -27,8 +27,8 @@
         <ng-template pTemplate>
           <p-card>
             <div class="main__bottom_content_pane">
-              <app-timestamp-table (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
-                [TransportCallSelected]="transportCallSelected"></app-timestamp-table>
+              <app-timestamp-table [TransportCallSelected]="transportCallSelected">
+              </app-timestamp-table>
             </div>
           </p-card>
         </ng-template>
