Hide timestamp table on unselecting a transport call
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/src/app/view/timestamp-table/timestamp-table.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="timestampInfos$ | async as timestampInfos; else loading">
+<ng-container *ngIf="transportCallSelected && timestampInfos$ | async as timestampInfos; else loading">
   <p-table [filterDelay]="0"
            [lazy]="false"
            [value]="timestampInfos"
