DDT-1251: Show portCallPart in display order
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/src/app/view/timestamp-table/timestamp-table.component.html
@@ -47,9 +47,9 @@
                       [(ngModel)]="selectedPortCallPart"
                       [options]="portCallParts$ | async"
                       [filter]=true
-                      filterBy="name"
+                      filterBy="portCallPart"
                       appendTo="body"
-                      optionLabel="name"
+                      optionLabel="portCallPart"
                       [showClear]=true
                       (onChange)="filterPortCallPartChange($event)"
                       placeholder="{{ 'general.portCallParts.select' | translate }}">
